# event-fs

./: AGENTS_rewriters.md  CONTEXT.md  COPYRIGHT  Cargo.toml  README.md  justfile  run-fuse.sh  smoke-eventfs.sh  smoke.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMMANDS.md  DEVELOPMENT.md  PROTOCOL.md  SESSION_LAYOUT_AND_CLI.md  TESTING.md  USAGE.md
eventfs-fuse/: Cargo.toml
eventfs-fuse/src/: attr.rs  cli.rs  fs.rs  lib.rs  main.rs  path_cache.rs
eventfs-fuse/src/fs/: mount_projection.rs  queued_overlay.rs  runtime.rs
eventfs-protocol/: Cargo.toml
eventfs-protocol/src/: errors.rs  file_names.rs  json.rs  lib.rs  mount_paths.rs  path.rs  plan.rs  subjects.rs
eventfs-transport/: Cargo.toml
eventfs-transport/src/: cache.rs  error.rs  invalidation.rs  lib.rs  writeback.rs
eventfs-transport/src/storage/: memory.rs  mod.rs
eventfs-transport/src/storage/nats/: core.rs  kv.rs  ledger.rs  mod.rs  objects.rs  streams.rs  watch.rs
eventfs-transport/tests/: jetstream_integration.rs  storage_contract.rs
infra/nats/: README.md  docker-compose.yml
scripts/: release-check.sh  release-surface-guard.sh  run_full_tests.sh
