[workspace]
members = [
    "eventfs-protocol",
    "eventfs-transport",
    "eventfs-fuse",
]
resolver = "2"

[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.10"

[patch.crates-io]
nuid = { path = "vendor/nuid" }

[profile.release]
lto = "thin"
codegen-units = 1
